using old pojo names
